nipdf/src/parser/file/snapshots/nipdf__parser__file__tests__empty.snap
---
source: nipdf/src/parser/file/tests.rs
expression: parse_xref_table(buf.as_ref()).unwrap()
---
(
    [],
    {},
)
