nipdf/src/parser/file/snapshots/nipdf__parser__file__tests__parse_frame.snap
---
source: nipdf/src/parser/file/tests.rs
expression: "parse_frame(b\"xref\n1 2\n0000000000 00000 n\n0000000010 00000 n\ntrailer\n<< /Size 1 >>\nstartxref\n1234\n%%EOF\n\").unwrap()"
---
(
    [
        115,
        116,
        97,
        114,
        116,
        120,
        114,
        101,
        102,
        10,
        49,
        50,
        51,
        52,
        10,
        37,
        37,
        69,
        79,
        70,
        10,
    ],
    (
        Dictionary(
            {
                Name(
                    "Size",
                ): Integer(
                    1,
                ),
            },
        ),
        [
            (
                1,
                InFile(
                    FilePos(
                        0,
                        0,
                        true,
                    ),
                ),
            ),
            (
                2,
                InFile(
                    FilePos(
                        10,
                        0,
                        true,
                    ),
                ),
            ),
        ],
    ),
)
