nipdf/src/parser/file/snapshots/nipdf__parser__file__tests__parse_trailer.snap
---
source: nipdf/src/parser/file/tests.rs
expression: parse_trailer(buf).unwrap()
---
(
    [
        115,
        116,
        97,
        114,
        116,
        120,
        114,
        101,
        102,
        10,
        49,
        50,
        51,
        52,
        10,
        37,
        37,
        69,
        79,
        70,
    ],
    Dictionary(
        {
            Name(
                Left(
                    280,
                ),
            ): Integer(
                1,
            ),
        },
    ),
)
